--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.4",
   "description": "Useful functional utils",
   "scripts": {
-    "test": "mocha -R spec test",
+    "test": "mocha -R spec test --compilers js:babel-core/register -watch",
     "patch-release": "npm version patch && npm publish && git push --follow-tags"
   },
   "repository": {
@@ -13,10 +13,14 @@
   "author": "Reid Philpot",
   "license": "ISC",
   "dependencies": {
-    "underscore": "^1.8.3"
+    "babel-core": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "lodash.identity": "^3.0.0",
+    "lodash.isfunction": "^3.0.8"
   },
   "devDependencies": {
     "chai": "^2.3.0",
     "mocha": "^2.2.5"
-  }
+  },
+  "false": {}
 }
