--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "lodash.identity": "^3.0.0",
-    "lodash.isfunction": "^3.0.8"
+    "babel-preset-es2015": "^6.24.1"
   },
   "devDependencies": {
     "chai": "^2.3.0",
