--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,13 @@ node_js:
   - 7
   - 6
   - 4
+
+addons:
+  sonarcloud:
+    organization: "reidphilpot-github"
+    token:
+      secure: "**************************" # encrypted value of your token
+
+script:
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - sonar-scanner
