--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.4",
   "description": "Useful functional utils",
   "scripts": {
+    "eslint:fix": "eslint --fix ./src/** ./test/**",
     "test": "mocha -R spec test --compilers js:babel-core/register",
     "patch-release": "npm version patch && npm publish && git push --follow-tags"
   },
@@ -18,12 +19,18 @@
   },
   "devDependencies": {
     "chai": "^2.3.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "prettier": "2.0.4"
   },
   "false": {}
 }
