--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Useful functional utils",
   "scripts": {
     "eslint:fix": "eslint --fix ./src/** ./test/**",
-    "test": "mocha -R spec test --compilers js:babel-core/register",
+    "test": "mocha -R spec test --require babel-core/register",
     "patch-release": "npm version patch && npm publish && git push --follow-tags"
   },
   "repository": {
@@ -14,11 +14,11 @@
   "author": "Reid Philpot",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1"
   },
   "devDependencies": {
-    "chai": "^2.3.0",
+    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-standard": "^10.2.1",
@@ -29,7 +29,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "mocha": "^2.2.5",
+    "mocha": "^7.1.1",
     "prettier": "2.0.4"
   },
   "false": {}
