--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,5 @@ node_js:
 
 dist: trusty
 
-addons:
-  sonarcloud:
-    organization: 'reidphilpot-github'
-    token:
-      secure: '**************************' # encrypted value of your token
-
 script:
-  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-  - sonar-scanner
+  - npm test
