--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   },
   "author": "Reid Philpot",
   "license": "ISC",
-  "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
